# swag-c-

./: README.md
CCache/: Makefile.in  README.swig  ccache.c  ccache.h  ccache.yo  ccache_swig_config.h.in  configure.ac  test.sh
Examples/: Makefile.in  README  index.html
Examples/d/: example.mk.in
Examples/go/: index.html
Examples/java/: index.html
Examples/javascript/: example.mk
Examples/octave/: example.mk
Examples/perl5/: index.html
Examples/python/: index.html
Examples/ruby/: index.html
Examples/s-exp/: uffi.lisp
Examples/tcl/: index.html
Examples/test-suite/: README  abstract_access.i  abstract_inherit.i  abstract_inherit_ok.i  abstract_signature.i  abstract_typedef.i  abstract_virtual.i  aggregate.i  allowexcept.i  allprotected.i  apply_signed_char.i  apply_strings.i  argout.i  array_member.i  array_typedef_memberin.i  arrays.i  arrays_dimensionless.i  arrays_global.i  autodoc.i  bloody_hell.i  bools.i  c_delete.i  c_delete_function.i  callback.i  catches.i  char_binary.i  char_constant.i  char_strings.i  chartest.i  class_scope_namespace.i  class_scope_weird.i  clientdata_prop_a.i  clientdata_prop_b.i  common.mk  const_const.i  const_const_2.i  constant_directive.i  constant_expr.i  constant_pointers.i  constover.i  (+396 more)
Examples/xml/: Makefile.in  error.expected-xml  example.expected-xml  example_apply.expected-xml  example_const.expected-xml  example_gif.expected-xml  example_inl.expected-xml  example_inl.i  example_p5.expected-xml  example_ro.expected-xml  example_title_add.expected-xml  example_xml.expected-xml  gnarly.expected-xml
Lib/: allkw.swg  attribute.i  carrays.i  cdata.i  cmalloc.i  constraints.i  cpointer.i  cstring.i  cwstring.i  director_common.swg  exception.i  intrusive_ptr.i  inttypes.i  linkruntime.c  math.i  pointer.i  runtime.swg  shared_ptr.i  std_except.i  stdint.i  stl.i  swig.swg  swigarch.i  swigerrors.swg  swigfragments.swg  swiginit.swg  swiglabels.swg  swigrun.i  swigrun.swg  swigwarnings.swg  wchar.i  windows.i
Lib/allegrocl/: allegrocl.swg  inout_typemaps.i  longlongs.i  std_list.i  std_string.i
Lib/cffi/: cffi.swg
Lib/chicken/: chicken.swg  chickenrun.swg  extra-install.list  multi-generic.scm  std_string.i  swigclosprefix.scm  typemaps.i
Lib/clisp/: clisp.swg
Lib/csharp/: arrays_csharp.i  boost_intrusive_ptr.i  boost_shared_ptr.i  csharp.swg  csharphead.swg  director.swg  enums.swg  enumsimple.swg  enumtypesafe.swg  std_array.i  std_auto_ptr.i  std_complex.i  std_except.i  std_list.i  std_map.i  std_set.i  std_string.i  std_vector.i  std_wstring.i  swiginterface.i  swigtype_inout.i  typemaps.i  wchar.i
Lib/d/: boost_shared_ptr.i  d.swg  dclassgen.swg  denums.swg  dexception.swg  dhead.swg  director.swg  dmemberfunctionpointers.swg  doperators.swg  dprimitives.swg  dstrings.swg  dswigtype.swg  dvoid.swg  std_except.i  std_map.i  std_shared_ptr.i  std_string.i  std_vector.i  typemaps.i  wrapperloader.swg
Lib/go/: cdata.i  director.swg  exception.i  go.swg  goruntime.swg  gostring.swg  std_except.i  std_map.i  std_string.i  typemaps.i
Lib/guile/: common.scm  cplusplus.i  guile.i  guile_scm.swg  guile_scm_run.swg  guilemain.i  interpreter.i  list-vector.i  pointer-in-out.i  ports.i  std_common.i  std_map.i  std_pair.i  std_string.i  std_vector.i  swigrun.i  typemaps.i
Lib/java/: arrays_java.i  boost_intrusive_ptr.i  boost_shared_ptr.i  director.swg  enums.swg  enumsimple.swg  enumtypesafe.swg  enumtypeunsafe.swg  java.swg  javahead.swg  std_auto_ptr.i  std_except.i  std_list.i  std_map.i  std_pair.i  std_set.i  std_string.i  std_unordered_map.i  std_unordered_set.i  std_vector.i  std_wstring.i  swiginterface.i  typemaps.i  various.i
Source/: Makefile.am  README
Source/CParse/: cparse.h  cscanner.c  parser.y  templ.c  util.c
Source/DOH/: base.c  doh.h  dohint.h  file.c  fio.c  hash.c  list.c  memory.c  string.c  void.c
Source/Doxygen/: doxycommands.h  doxyentity.cxx  doxyentity.h  doxyparser.cxx  doxyparser.h  doxytranslator.cxx  doxytranslator.h  javadoc.cxx  javadoc.h  pydoc.cxx  pydoc.h
Source/Include/: swigwarn.h
Source/Modules/: README  allegrocl.cxx  allocate.cxx  browser.cxx  cffi.cxx  chicken.cxx  clisp.cxx  contract.cxx  csharp.cxx  d.cxx  directors.cxx  emit.cxx  go.cxx  guile.cxx  interface.cxx  java.cxx  javascript.cxx  lang.cxx  lua.cxx  main.cxx  modula3.cxx  mzscheme.cxx  nested.cxx  ocaml.cxx  octave.cxx  overload.cxx  perl5.cxx  php.cxx  pike.cxx  python.cxx  r.cxx  ruby.cxx  s-exp.cxx  scilab.cxx  swigmain.cxx  swigmod.h  tcl8.cxx  typepass.cxx  uffi.cxx  utils.cxx  (+1 more)
Source/Preprocessor/: cpp.c  expr.c  preprocessor.h
Source/Swig/: cwrap.c  deprecate.c  error.c  extend.c  fragment.c  getopt.c  include.c  misc.c  naming.c  parms.c  scanner.c  stype.c  swig.h  swigfile.h  swigopt.h  swigparm.h  swigscan.h  swigtree.h  swigwrap.h  symbol.c  tree.c  typemap.c  typeobj.c  typesys.c  wrapfunc.c
Tools/: mkdist.py  mkrelease.py  mkwindows.sh  obs-update  pcre-build.sh  pyname_patch.py  setup.py.tmpl  swig.gdb  testflags.py  travis-linux-install.sh  travis-osx-install.sh  vcfilter
Win/: README.txt
(+1530 files in other folders)
